# arize-fde-travel-agent-evals

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  feedback-loop.yml
agent/: api.py  chat.py  config.py  loop.py  prompt.py  redaction.py  session_store.py  tools.py  tracing.py
data/: flights.json  hotels.json  weather.json
docs/: BACKLOG.md  CODEBASE_LINK_CHECK.md  DAY1_FINDINGS.md  DELIVERY_AUDIT.md  EVAL_ADJUDICATION.md  EVIDENCE_INDEX.md  FINAL_PLAN.md  FOLLOWUP_QUESTIONS.md  Interview_2_Customer_Presentation.pptx  JUDGE_CALIBRATION.md  MODEL_COMPARISON.md  MONITORS.md  PII_BOUNDARY.md  PRESENTATION.md  PRODUCTION_READINESS.md  PROJECT_AUDIT_2026-07-21.md  README_FOR_REVIEWERS.md  REMEDIATION_PLAN.md  REPO_FINDINGS.md  REQUIREMENT_MAP.md  SKILLS_LOG.md  TOKEN_STRATEGY.md
docs/experiments/: COMPARISON-evalv1.md  COMPARISON.md  RUN_INDEX.md
docs/proposals/: CANDIDATES.md
docs/verification/: DAY0_FIXTURE_CHECKS.md  recompute_fixture_tables.py
evals/: context.py  dataset.py  e_conflict.py  e_grounding.py  e_guardrails.py  e_tone.py  e_toolcalls.py  entities.py  golden_dataset.json  judges.py  run_evals.py  run_judges.py  trace_model.py
scripts/: approval.py  capture_baseline.py  compare_experiments.py  feedback_loop.py  generate_traffic.py  push_to_arize.py  replay_spans_to_arize.py  run_experiment.py
tests/: conftest.py  test_approval_record.py  test_conflict.py  test_dataset_enrichment.py  test_experiment_redaction.py  test_feedback_loop_orchestration.py  test_grounding.py  test_grounding_headings.py  test_loop_limits.py  test_redaction.py  test_session_store.py  test_tools.py  test_trace_model.py
(+120 files in other folders)
