[project]
name = "arize-fde-agent"
version = "0.1.0"
description = "A simple AI travel agent (CLI + FastAPI) built on the Anthropic API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.116.0",
    "arize-otel>=0.13.0",
    "arize[datasets]>=8.40.0",
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "openinference-instrumentation-anthropic>=1.0.6",
    "python-dotenv==1.2.2",
    "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Two entries, both required:
#   "."      -> `import agent`, `import evals`, and the `from evals.x import y`
#               form used inside evals/e_grounding.py and agent/redaction.py.
#   "evals"  -> the sibling-import form used by evals/run_evals.py
#               (`from context import EvalContext`), which only resolves when the
#               evals directory itself is on sys.path.
pythonpath = [".", "evals"]
